[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentmemory"
version = "0.2.0"
description = "混合记忆框架：向量搜索 + 知识图谱"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agentmemory = "agentmemory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
