[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentmemory"
version = "0.4.0"
description = "混合记忆框架：向量搜索 + 知识图谱"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jane-o-O-o-O"},
]
keywords = ["memory", "vector-search", "knowledge-graph", "embedding", "rag", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/Jane-o-O-o-O/agentmemory"
Repository = "https://github.com/Jane-o-O-o-O/agentmemory"
Issues = "https://github.com/Jane-o-O-o-O/agentmemory/issues"

[project.scripts]
agentmemory = "agentmemory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["agentmemory*"]
exclude = ["tests*"]
